--- a/package.json
+++ b/package.json
@@ -26,8 +26,6 @@
     "clean:umd": "rimraf dist/umd",
     "deploy": "gh-pages -d build",
     "lint": "eslint 'source/**/*.js'",
-    "typecheck": "flow check",
-    "prebuild": "npm run typecheck && npm run lint",
     "prettier": "prettier --write '{playground,source}/**/*.js'",
     "prettier:diff": "prettier --list-different '{playground,source}/**/*.js'",
     "postpublish": "npm run deploy",
@@ -124,7 +122,6 @@
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
-    "flow-bin": "^0.63.1",
     "flow-copy-source": "^1.2.1",
     "fs-extra": "^4.0.0",
     "gh-pages": "^1.0.0",
@@ -138,7 +135,6 @@
     "postcss-cli": "^4.1.1",
     "postcss-loader": "^2.0.9",
     "prettier": "^1.9.2",
-    "puppeteer": "^1.0.0",
     "react": "^16.0.0",
     "react-codemirror": "^1.0.0",
     "react-dom": "^16.0.0",
@@ -149,6 +145,7 @@
     "redbox-react": "^1.4.3",
     "rimraf": "^2.4.3",
     "style-loader": "^0.19.1",
+    "unigrid": "0.0.43",
     "watch": "^1.0.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
